// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEditShippingAddressModal should render correctly 1`] = `
<ModalNative
  className="TCPModal__Content"
  closeIconDataLocator="closeeditmodal"
  fixedWidth={true}
  heading="lbl_shipping_editHeading"
  inheritedStyles=""
  isOverlay={false}
  onRequestClose={[Function]}
  overlayClassName="TCPModal__Overlay"
  visible={true}
>
  <Styled(ScrollViewMock)
    keyboardShouldPersistTaps="handled"
  />
</ModalNative>
`;

exports[`AddEditShippingAddressModal should render correctly with modalType add 1`] = `
<ModalNative
  className="TCPModal__Content"
  closeIconDataLocator="closeaddmodal"
  fixedWidth={true}
  heading="lbl_shipping_addHeading"
  inheritedStyles=""
  isOverlay={false}
  onRequestClose={[Function]}
  overlayClassName="TCPModal__Overlay"
  visible={true}
>
  <Styled(ScrollViewMock)
    keyboardShouldPersistTaps="handled"
  />
</ModalNative>
`;
